// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given a valid json file was provided Given "allowNonExistingKeys" is "true" should successfully parse translations even non-existing keys exist 1`] = `
Object {
  "entries": Array [
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "child",
      "key": "one",
      "output": "\\"child\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "children",
      "key": "many",
      "output": "\\"children\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "red",
      "key": "color1",
      "output": "\\"red\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "blue",
      "key": "color2",
      "output": "\\"blue\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name3} \${surname3}",
      "key": "one",
      "output": "({ name3, surname3 }) => \`Hello \${name3} \${surname3}\`",
      "variables": Array [
        "name3",
        "surname3",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "nonExistingKey",
      ],
      "functions": Array [
        "t",
      ],
      "input": "I call a non existing key \${t(\\"nonExistingKey\\")}",
      "key": "invalid",
      "output": "({}, { t }) => \`I call a non existing key \${t(\\"nonExistingKey\\")}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "So that key27 can pass",
      "key": "one",
      "output": "\\"So that key27 can pass\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "So key18 can pass allowNonExistingKeys: false option",
      "key": "key",
      "output": "\\"So key18 can pass allowNonExistingKeys: false option\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key0",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key1",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.person.name} \${info.person.surname}",
      "key": "key10",
      "output": "({ info }) => \`Hello \${info.person.name} \${info.person.surname}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Your surname is \${surname}, your birthday is \${birthday}",
      "key": "key11",
      "output": "({ surname, birthday }) => \`Your surname is \${surname}, your birthday is \${birthday}\`",
      "variables": Array [
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${deep.nested.key} \${info.person.name.x.y.z}",
      "key": "key12",
      "output": "({ deep, info }) => \`Hello \${deep.nested.key} \${info.person.name.x.y.z}\`",
      "variables": Array [
        "deep",
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.t.x}",
      "key": "key13",
      "output": "({ info }) => \`Hello \${info.t.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.c.x}",
      "key": "key14",
      "output": "({ info }) => \`Hello \${info.c.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.l.x}",
      "key": "key15",
      "output": "({ info }) => \`Hello \${info.l.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \\\\\${escaped}",
      "key": "key16",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \\\\\${escaped}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key3",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('key3')} message.",
      "key": "key17",
      "output": "({}, { t }) => \`This is a \${t('key3')} message.\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "color1",
        "color2",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('color1')} \${t('color2')}",
      "key": "key18",
      "output": "({}, { t }) => \`This is a \${t('color1')} \${t('color2')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "same.key",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('same.key')} \${t('same.key')}",
      "key": "key19",
      "output": "({}, { t }) => \`This is a \${t('same.key')} \${t('same.key')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello world",
      "key": "key2",
      "output": "\\"Hello world\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key7",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${day}! \${t('key7', {name, surname})}",
      "key": "key20",
      "output": "({ day, name, surname }, { t }) => \`Today is \${day}! \${t('key7', {name, surname})}\`",
      "variables": Array [
        "day",
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key4",
        "key11",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}",
      "key": "key21",
      "output": "({ today, name, surname, birthday }, { t }) => \`Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}\`",
      "variables": Array [
        "today",
        "name",
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "records",
        "present.be",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...",
      "key": "key22",
      "output": "({ number_Of_Records }, { c }) => \`yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...\`",
      "variables": Array [
        "number_Of_Records",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "records",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', myVar1)} \${c('records', myVar2)}.",
      "key": "key23",
      "output": "({ myVar1, myVar2 }, { c }) => \`There \${c('present.be', myVar1)} \${c('records', myVar2)}.\`",
      "variables": Array [
        "myVar1",
        "myVar2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}",
      "key": "key24",
      "output": "({ numberOfKids, myVar, anotherVar }, { c }) => \`There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}\`",
      "variables": Array [
        "numberOfKids",
        "myVar",
        "anotherVar",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key25",
      "output": "({ numberOfKids }, { c }) => \`There \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key26",
      "output": "({ numberOfKids }, { c }) => \`There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "item.error",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "Ooops! \${c('item.error', numberOfItems, {item})}",
      "key": "key27",
      "output": "({ numberOfItems, item }, { c }) => \`Ooops! \${c('item.error', numberOfItems, {item})}\`",
      "variables": Array [
        "numberOfItems",
        "item",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [
        "currency",
      ],
      "input": "Localization \${currency(myValue)}",
      "key": "key28",
      "output": "({ myValue }, { currency }) => \`Localization \${currency(myValue)}\`",
      "variables": Array [
        "myValue",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello {world}",
      "key": "key3",
      "output": "\\"Hello {world}\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name}",
      "key": "key4",
      "output": "({ name }) => \`Hello \${name}\`",
      "variables": Array [
        "name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${_name}",
      "key": "key5",
      "output": "({ _name }) => \`Hello \${_name}\`",
      "variables": Array [
        "_name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${same} \${same}",
      "key": "key6",
      "output": "({ same }) => \`Hello \${same} \${same}\`",
      "variables": Array [
        "same",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname}",
      "key": "key7",
      "output": "({ name, surname }) => \`Hello \${name} \${surname}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \${name}",
      "key": "key8",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \${name}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.name}",
      "key": "key9",
      "output": "({ info }) => \`Hello \${info.name}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "is",
      "key": "one",
      "output": "\\"is\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "are",
      "key": "many",
      "output": "\\"are\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "one record",
      "key": "one",
      "output": "\\"one record\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "many records",
      "key": "many",
      "output": "\\"many records\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "mirror mirror",
      "key": "same.key",
      "output": "\\"mirror mirror\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "a string key",
      "key": "string.key",
      "output": "\\"a string key\\"",
      "variables": Array [],
    },
  ],
  "locale": "en-Us",
}
`;

exports[`Given a valid json file was provided Given autoTrimValues is false should successfully parse translations without sorting keys 1`] = `
Object {
  "entries": Array [
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "child",
      "key": "one",
      "output": "\\"child\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "children",
      "key": "many",
      "output": "\\"children\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "red",
      "key": "color1",
      "output": "\\"red\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "blue",
      "key": "color2",
      "output": "\\"blue\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name3} \${surname3}",
      "key": "one",
      "output": "({ name3, surname3 }) => \`Hello \${name3} \${surname3}\`",
      "variables": Array [
        "name3",
        "surname3",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "So that key27 can pass",
      "key": "one",
      "output": "\\"So that key27 can pass\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "So key18 can pass allowNonExistingKeys: false option",
      "key": "key",
      "output": "\\"So key18 can pass allowNonExistingKeys: false option\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key0",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "   ",
      "key": "key1",
      "output": "\\"   \\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.person.name} \${info.person.surname}",
      "key": "key10",
      "output": "({ info }) => \`Hello \${info.person.name} \${info.person.surname}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Your surname is \${surname}, your birthday is \${birthday}",
      "key": "key11",
      "output": "({ surname, birthday }) => \`Your surname is \${surname}, your birthday is \${birthday}\`",
      "variables": Array [
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${deep.nested.key} \${info.person.name.x.y.z}",
      "key": "key12",
      "output": "({ deep, info }) => \`Hello \${deep.nested.key} \${info.person.name.x.y.z}\`",
      "variables": Array [
        "deep",
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.t.x}",
      "key": "key13",
      "output": "({ info }) => \`Hello \${info.t.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.c.x}",
      "key": "key14",
      "output": "({ info }) => \`Hello \${info.c.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.l.x}",
      "key": "key15",
      "output": "({ info }) => \`Hello \${info.l.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \\\\\${escaped}",
      "key": "key16",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \\\\\${escaped}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key3",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('key3')} message.",
      "key": "key17",
      "output": "({}, { t }) => \`This is a \${t('key3')} message.\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "color1",
        "color2",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('color1')} \${t('color2')}",
      "key": "key18",
      "output": "({}, { t }) => \`This is a \${t('color1')} \${t('color2')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "same.key",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('same.key')} \${t('same.key')}",
      "key": "key19",
      "output": "({}, { t }) => \`This is a \${t('same.key')} \${t('same.key')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello world",
      "key": "key2",
      "output": "\\"Hello world\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key7",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${day}! \${t('key7', {name, surname})}",
      "key": "key20",
      "output": "({ day, name, surname }, { t }) => \`Today is \${day}! \${t('key7', {name, surname})}\`",
      "variables": Array [
        "day",
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key4",
        "key11",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}",
      "key": "key21",
      "output": "({ today, name, surname, birthday }, { t }) => \`Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}\`",
      "variables": Array [
        "today",
        "name",
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "records",
        "present.be",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...",
      "key": "key22",
      "output": "({ number_Of_Records }, { c }) => \`yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...\`",
      "variables": Array [
        "number_Of_Records",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "records",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', myVar1)} \${c('records', myVar2)}.",
      "key": "key23",
      "output": "({ myVar1, myVar2 }, { c }) => \`There \${c('present.be', myVar1)} \${c('records', myVar2)}.\`",
      "variables": Array [
        "myVar1",
        "myVar2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}",
      "key": "key24",
      "output": "({ numberOfKids, myVar, anotherVar }, { c }) => \`There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}\`",
      "variables": Array [
        "numberOfKids",
        "myVar",
        "anotherVar",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key25",
      "output": "({ numberOfKids }, { c }) => \`There \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key26",
      "output": "({ numberOfKids }, { c }) => \`There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "item.error",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "Ooops! \${c('item.error', numberOfItems, {item})}",
      "key": "key27",
      "output": "({ numberOfItems, item }, { c }) => \`Ooops! \${c('item.error', numberOfItems, {item})}\`",
      "variables": Array [
        "numberOfItems",
        "item",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [
        "currency",
      ],
      "input": "Localization \${currency(myValue)}",
      "key": "key28",
      "output": "({ myValue }, { currency }) => \`Localization \${currency(myValue)}\`",
      "variables": Array [
        "myValue",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello {world}",
      "key": "key3",
      "output": "\\"Hello {world}\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name}",
      "key": "key4",
      "output": "({ name }) => \`Hello \${name}\`",
      "variables": Array [
        "name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${_name}",
      "key": "key5",
      "output": "({ _name }) => \`Hello \${_name}\`",
      "variables": Array [
        "_name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${same} \${same}",
      "key": "key6",
      "output": "({ same }) => \`Hello \${same} \${same}\`",
      "variables": Array [
        "same",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname}",
      "key": "key7",
      "output": "({ name, surname }) => \`Hello \${name} \${surname}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \${name}",
      "key": "key8",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \${name}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.name}",
      "key": "key9",
      "output": "({ info }) => \`Hello \${info.name}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "is",
      "key": "one",
      "output": "\\"is\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "are",
      "key": "many",
      "output": "\\"are\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "one record",
      "key": "one",
      "output": "\\"one record\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "many records",
      "key": "many",
      "output": "\\"many records\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "mirror mirror",
      "key": "same.key",
      "output": "\\"mirror mirror\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "a string key",
      "key": "string.key",
      "output": "\\"a string key\\"",
      "variables": Array [],
    },
  ],
  "locale": "en-Us",
}
`;

exports[`Given a valid json file was provided Given no options were provided should successfully parse translations into ParsedDictionary object 1`] = `
Object {
  "entries": Array [
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "child",
      "key": "one",
      "output": "\\"child\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "children",
      "key": "many",
      "output": "\\"children\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "red",
      "key": "color1",
      "output": "\\"red\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "blue",
      "key": "color2",
      "output": "\\"blue\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name3} \${surname3}",
      "key": "one",
      "output": "({ name3, surname3 }) => \`Hello \${name3} \${surname3}\`",
      "variables": Array [
        "name3",
        "surname3",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "So that key27 can pass",
      "key": "one",
      "output": "\\"So that key27 can pass\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "So key18 can pass allowNonExistingKeys: false option",
      "key": "key",
      "output": "\\"So key18 can pass allowNonExistingKeys: false option\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key0",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key1",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.person.name} \${info.person.surname}",
      "key": "key10",
      "output": "({ info }) => \`Hello \${info.person.name} \${info.person.surname}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Your surname is \${surname}, your birthday is \${birthday}",
      "key": "key11",
      "output": "({ surname, birthday }) => \`Your surname is \${surname}, your birthday is \${birthday}\`",
      "variables": Array [
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${deep.nested.key} \${info.person.name.x.y.z}",
      "key": "key12",
      "output": "({ deep, info }) => \`Hello \${deep.nested.key} \${info.person.name.x.y.z}\`",
      "variables": Array [
        "deep",
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.t.x}",
      "key": "key13",
      "output": "({ info }) => \`Hello \${info.t.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.c.x}",
      "key": "key14",
      "output": "({ info }) => \`Hello \${info.c.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.l.x}",
      "key": "key15",
      "output": "({ info }) => \`Hello \${info.l.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \\\\\${escaped}",
      "key": "key16",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \\\\\${escaped}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key3",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('key3')} message.",
      "key": "key17",
      "output": "({}, { t }) => \`This is a \${t('key3')} message.\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "color1",
        "color2",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('color1')} \${t('color2')}",
      "key": "key18",
      "output": "({}, { t }) => \`This is a \${t('color1')} \${t('color2')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "same.key",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('same.key')} \${t('same.key')}",
      "key": "key19",
      "output": "({}, { t }) => \`This is a \${t('same.key')} \${t('same.key')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello world",
      "key": "key2",
      "output": "\\"Hello world\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key7",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${day}! \${t('key7', {name, surname})}",
      "key": "key20",
      "output": "({ day, name, surname }, { t }) => \`Today is \${day}! \${t('key7', {name, surname})}\`",
      "variables": Array [
        "day",
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key4",
        "key11",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}",
      "key": "key21",
      "output": "({ today, name, surname, birthday }, { t }) => \`Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}\`",
      "variables": Array [
        "today",
        "name",
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "records",
        "present.be",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...",
      "key": "key22",
      "output": "({ number_Of_Records }, { c }) => \`yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...\`",
      "variables": Array [
        "number_Of_Records",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "records",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', myVar1)} \${c('records', myVar2)}.",
      "key": "key23",
      "output": "({ myVar1, myVar2 }, { c }) => \`There \${c('present.be', myVar1)} \${c('records', myVar2)}.\`",
      "variables": Array [
        "myVar1",
        "myVar2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}",
      "key": "key24",
      "output": "({ numberOfKids, myVar, anotherVar }, { c }) => \`There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}\`",
      "variables": Array [
        "numberOfKids",
        "myVar",
        "anotherVar",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key25",
      "output": "({ numberOfKids }, { c }) => \`There \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key26",
      "output": "({ numberOfKids }, { c }) => \`There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "item.error",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "Ooops! \${c('item.error', numberOfItems, {item})}",
      "key": "key27",
      "output": "({ numberOfItems, item }, { c }) => \`Ooops! \${c('item.error', numberOfItems, {item})}\`",
      "variables": Array [
        "numberOfItems",
        "item",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [
        "currency",
      ],
      "input": "Localization \${currency(myValue)}",
      "key": "key28",
      "output": "({ myValue }, { currency }) => \`Localization \${currency(myValue)}\`",
      "variables": Array [
        "myValue",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello {world}",
      "key": "key3",
      "output": "\\"Hello {world}\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name}",
      "key": "key4",
      "output": "({ name }) => \`Hello \${name}\`",
      "variables": Array [
        "name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${_name}",
      "key": "key5",
      "output": "({ _name }) => \`Hello \${_name}\`",
      "variables": Array [
        "_name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${same} \${same}",
      "key": "key6",
      "output": "({ same }) => \`Hello \${same} \${same}\`",
      "variables": Array [
        "same",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname}",
      "key": "key7",
      "output": "({ name, surname }) => \`Hello \${name} \${surname}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \${name}",
      "key": "key8",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \${name}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.name}",
      "key": "key9",
      "output": "({ info }) => \`Hello \${info.name}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "is",
      "key": "one",
      "output": "\\"is\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "are",
      "key": "many",
      "output": "\\"are\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "one record",
      "key": "one",
      "output": "\\"one record\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "many records",
      "key": "many",
      "output": "\\"many records\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "mirror mirror",
      "key": "same.key",
      "output": "\\"mirror mirror\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "a string key",
      "key": "string.key",
      "output": "\\"a string key\\"",
      "variables": Array [],
    },
  ],
  "locale": "en-Us",
}
`;

exports[`Given a valid json file was provided Given sortEntryKeys is false should successfully parse translations without sorting keys 1`] = `
Object {
  "entries": Array [
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "red",
      "key": "color1",
      "output": "\\"red\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "blue",
      "key": "color2",
      "output": "\\"blue\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "a string key",
      "key": "string.key",
      "output": "\\"a string key\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "mirror mirror",
      "key": "same.key",
      "output": "\\"mirror mirror\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key0",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "",
      "key": "key1",
      "output": "\\"\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello world",
      "key": "key2",
      "output": "\\"Hello world\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello {world}",
      "key": "key3",
      "output": "\\"Hello {world}\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name}",
      "key": "key4",
      "output": "({ name }) => \`Hello \${name}\`",
      "variables": Array [
        "name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${_name}",
      "key": "key5",
      "output": "({ _name }) => \`Hello \${_name}\`",
      "variables": Array [
        "_name",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${same} \${same}",
      "key": "key6",
      "output": "({ same }) => \`Hello \${same} \${same}\`",
      "variables": Array [
        "same",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname}",
      "key": "key7",
      "output": "({ name, surname }) => \`Hello \${name} \${surname}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \${name}",
      "key": "key8",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \${name}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.name}",
      "key": "key9",
      "output": "({ info }) => \`Hello \${info.name}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.person.name} \${info.person.surname}",
      "key": "key10",
      "output": "({ info }) => \`Hello \${info.person.name} \${info.person.surname}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Your surname is \${surname}, your birthday is \${birthday}",
      "key": "key11",
      "output": "({ surname, birthday }) => \`Your surname is \${surname}, your birthday is \${birthday}\`",
      "variables": Array [
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${deep.nested.key} \${info.person.name.x.y.z}",
      "key": "key12",
      "output": "({ deep, info }) => \`Hello \${deep.nested.key} \${info.person.name.x.y.z}\`",
      "variables": Array [
        "deep",
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.t.x}",
      "key": "key13",
      "output": "({ info }) => \`Hello \${info.t.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.c.x}",
      "key": "key14",
      "output": "({ info }) => \`Hello \${info.c.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${info.l.x}",
      "key": "key15",
      "output": "({ info }) => \`Hello \${info.l.x}\`",
      "variables": Array [
        "info",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "Hello \${name} \${surname} \\\\\${escaped}",
      "key": "key16",
      "output": "({ name, surname }) => \`Hello \${name} \${surname} \\\\\${escaped}\`",
      "variables": Array [
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key3",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('key3')} message.",
      "key": "key17",
      "output": "({}, { t }) => \`This is a \${t('key3')} message.\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "color1",
        "color2",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('color1')} \${t('color2')}",
      "key": "key18",
      "output": "({}, { t }) => \`This is a \${t('color1')} \${t('color2')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "same.key",
      ],
      "functions": Array [
        "t",
      ],
      "input": "This is a \${t('same.key')} \${t('same.key')}",
      "key": "key19",
      "output": "({}, { t }) => \`This is a \${t('same.key')} \${t('same.key')}\`",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key7",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${day}! \${t('key7', {name, surname})}",
      "key": "key20",
      "output": "({ day, name, surname }, { t }) => \`Today is \${day}! \${t('key7', {name, surname})}\`",
      "variables": Array [
        "day",
        "name",
        "surname",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [
        "key4",
        "key11",
      ],
      "functions": Array [
        "t",
      ],
      "input": "Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}",
      "key": "key21",
      "output": "({ today, name, surname, birthday }, { t }) => \`Today is \${today}! \${t('key4', {name})}  \${t('key11', {surname, birthday})}\`",
      "variables": Array [
        "today",
        "name",
        "surname",
        "birthday",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "is",
      "key": "one",
      "output": "\\"is\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "present.be",
      "input": "are",
      "key": "many",
      "output": "\\"are\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "one record",
      "key": "one",
      "output": "\\"one record\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "records",
      "input": "many records",
      "key": "many",
      "output": "\\"many records\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "child",
      "key": "one",
      "output": "\\"child\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "child",
      "input": "children",
      "key": "many",
      "output": "\\"children\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name3} \${surname3}",
      "key": "one",
      "output": "({ name3, surname3 }) => \`Hello \${name3} \${surname3}\`",
      "variables": Array [
        "name3",
        "surname3",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "conditional",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "records",
        "present.be",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...",
      "key": "key22",
      "output": "({ number_Of_Records }, { c }) => \`yes yes.. \${c('records', number_Of_Records)}, there \${c('present.be', number_Of_Records)}...\`",
      "variables": Array [
        "number_Of_Records",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "records",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', myVar1)} \${c('records', myVar2)}.",
      "key": "key23",
      "output": "({ myVar1, myVar2 }, { c }) => \`There \${c('present.be', myVar1)} \${c('records', myVar2)}.\`",
      "variables": Array [
        "myVar1",
        "myVar2",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}",
      "key": "key24",
      "output": "({ numberOfKids, myVar, anotherVar }, { c }) => \`There is \${c('child', numberOfKids)} \${myVar} some \${c('child', anotherVar)}\`",
      "variables": Array [
        "numberOfKids",
        "myVar",
        "anotherVar",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key25",
      "output": "({ numberOfKids }, { c }) => \`There \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "present.be",
        "child",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}",
      "key": "key26",
      "output": "({ numberOfKids }, { c }) => \`There \${c('present.be', numberOfKids)} \${numberOfKids} \${c('child', numberOfKids)}\`",
      "variables": Array [
        "numberOfKids",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [
        "item.error",
      ],
      "entryKeys": Array [],
      "functions": Array [
        "c",
      ],
      "input": "Ooops! \${c('item.error', numberOfItems, {item})}",
      "key": "key27",
      "output": "({ numberOfItems, item }, { c }) => \`Ooops! \${c('item.error', numberOfItems, {item})}\`",
      "variables": Array [
        "numberOfItems",
        "item",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [
        "currency",
      ],
      "input": "Localization \${currency(myValue)}",
      "key": "key28",
      "output": "({ myValue }, { currency }) => \`Localization \${currency(myValue)}\`",
      "variables": Array [
        "myValue",
      ],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "input": "So key18 can pass allowNonExistingKeys: false option",
      "key": "key",
      "output": "\\"So key18 can pass allowNonExistingKeys: false option\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "So that key27 can pass",
      "key": "one",
      "output": "\\"So that key27 can pass\\"",
      "variables": Array [],
    },
    Object {
      "conditionalGroupKeys": Array [],
      "entryKeys": Array [],
      "functions": Array [],
      "groupKey": "item.error",
      "input": "Hello \${name2} \${surname2}",
      "key": "many",
      "output": "({ name2, surname2 }) => \`Hello \${name2} \${surname2}\`",
      "variables": Array [
        "name2",
        "surname2",
      ],
    },
  ],
  "locale": "en-Us",
}
`;
